--- a/iclude/2.html
+++ b/iclude/2.html
@@ -1,13 +1,8 @@
 ---
 layout: default
-title: Eliminar alumnos
-css: amarillo
+title: Pagina 2
+
 ---
 
-<h1>Eliminar alumnos</h1> <br>
-<form>
-  <select name="alumno_id">
-    <option value="1">Ejemplo</option>
-  </select>
-  <input type="submit" value="Eliminar">
-</form>
+
+<h1>Esta es la Pagina 2</h1>
